# jwt_auth

./: .gitignore  Cargo.toml  LICENSE  env.example
migrate/: permission.sql  user.sql
src/: lib.rs  main.rs
src/buckets/: bucket.rs
src/user/: authorize.rs  login.rs  model.rs  new.rs  register.rs
src/user/reset_password/: initialize.rs  reset.rs
src/utils/: appstate.rs
src/utils/mail/: password_reset.rs  register.rs
src/utils/validate/: password.rs  username.rs
