[package]
name = "jwt-authentication"
version = "0.1.0"
edition = "2021"

[lib]
name = "jwt_authentication_lib"
doc = true
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.0-alpha.1", features = ["tower-log", "tokio", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlx-macros", "runtime-tokio", "postgres", "sqlx-postgres"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
dotenv = { version = "0.15.0" }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
rand = { version = "0.8.5", features = ["serde"] }
